# medialab-bot

./: .dockerignore  .env.dev.example  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/medialab_bot/: client.py  config.py  constants.py  embeds.py  main.py  media.py
src/medialab_bot/client/: __init__.py  _base.py  _jobs.py  _status.py  _tmdb.py  _torrents.py
src/medialab_bot/cogs/: jobs.py  search.py  status.py  torrent.py
src/medialab_bot/schemas/: downloads.py  errors.py  jobs.py  system.py  tmdb.py  torrents.py  transfers.py
src/medialab_bot/views/: jobs.py  scope.py  tmdb.py  torrent.py
tests/: conftest.py  helpers.py  test_client.py  test_embeds.py  test_media.py  test_schemas.py
tests/cogs/: test_jobs.py  test_scope.py  test_search.py  test_status.py  test_torrent.py
