[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "medialab-bot"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "discord.py>=2.4",
    "httpx>=0.27",
    "medialab-contracts",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.2",
]

[project.scripts]
medialab-bot = "medialab_bot.main:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/medialab_bot/_version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live credentials, skipped by default",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLR2004"]
# UP042: keep `(str, Enum)` rather than `StrEnum` - consistent across all
# services and the future medialab-contracts shared enums.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true

# discord.py's interaction-data TypedDicts and View/component callbacks do not
# narrow cleanly under mypy (e.g. interaction.data["values"] is a union of
# TypedDicts without that key). These are framework typing artifacts, not
# behavior bugs - the cog/view tests pass. Relaxed here to land the standards
# backfill; revisit if discord.py ships better stubs.
[[tool.mypy.overrides]]
module = [
    "medialab_bot.views.*",
    "medialab_bot.cogs.*",
]
disable_error_code = [
    "typeddict-item",
    "index",
    "attr-defined",
    "func-returns-value",
    "method-assign",
    "var-annotated",
    # discord.py's followup.send view= defaults to a MISSING sentinel, not None;
    # passing an optional View is fine at runtime but the stub types it strict.
    "arg-type",
]

[tool.uv.sources]
medialab-contracts = { git = "https://github.com/MickMarch/medialab-contracts", rev = "v0.2.0" }

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.8.0",
]
